--- a/mubei/store/index.html
+++ b/mubei/store/index.html
@@ -97,14 +97,14 @@
 						<!--<li><a href="index.html" class="red"><font class="iconfont">&#xe612;</font><span class="inco_txt">首页</span></a></li>-->
 						<li><a href="regist_seller.html" class="red"><font class="iconfont">&#xe612;</font><span class="inco_txt">入驻商家</span></a></li>
 						<!--<li><a href="seller.html"><font class="iconfont">&#xe660;</font><span class="inco_txt">热门商品</span></a></li>-->
-						<li><a href="javascript:void(0)"><font class="iconfont">&#xe660;</font><span class="inco_txt">热门商品</span></a></li>
+						<!--<li><a href="javascript:void(0)"><font class="iconfont">&#xe660;</font><span class="inco_txt">热门商品</span></a></li>-->
 						<!--<li><a href="regist_seller.html"><font class="iconfont">&#xe660;</font><span class="inco_txt">商家</span></a></li>-->
-						<li><a href="javascript:void(0)"><font class="iconfont">&#xe62e;</font><span class="inco_txt">最新商品</span></a></li>
-						<li><a href="javascript:void(0)"><font class="iconfont">&#xe62e;</font><span class="inco_txt">推荐商品</span></a></li>
-						<li><a href="javascript:void(0)"><font class="iconfont">&#xe62e;</font><span class="inco_txt">全部商品</span></a></li>
+						<li><a href="newgoods.html"><font class="iconfont">&#xe62e;</font><span class="inco_txt">最新商品</span></a></li>
+						<!--<li><a href="javascript:void(0)"><font class="iconfont">&#xe62e;</font><span class="inco_txt">推荐商品</span></a></li>-->
+						<!--<li><a href="javascript:void(0)"><font class="iconfont">&#xe62e;</font><span class="inco_txt">全部商品</span></a></li>-->
 						<li><a href="My_info.html"><font class="iconfont">&#xe62e;</font><span class="inco_txt">会员中心</span></a></li>
-						<li><a href="javascript:void(0)"><font class="iconfont">&#xe62e;</font><span class="inco_txt">帮助中心</span></a></li>
-						<li><a href="javascript:void(0)"><font class="iconfont">&#xe62e;</font><span class="inco_txt">商城介绍</span></a></li>
+						<!--<li><a href="javascript:void(0)"><font class="iconfont">&#xe62e;</font><span class="inco_txt">帮助中心</span></a></li>-->
+						<!--<li><a href="javascript:void(0)"><font class="iconfont">&#xe62e;</font><span class="inco_txt">商城介绍</span></a></li>-->
 					</ul>
 			</div>
 			<div id="back_top">
