--- a/mubei/TurnOut/turn_recode.html
+++ b/mubei/TurnOut/turn_recode.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <link href="../css/mui.min.css" rel="stylesheet" />
-    <script type="text/javascript" src="../js/back_icon.js" ></script>
-    <script type="text/javascript" src="../js/jquery.min.js" ></script>
-<script type="text/javascript" src="../js/common.js" ></script>
-<script type="text/javascript" src="../js/change_lange.js" ></script>
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <link href="../css/mui.min.css" rel="stylesheet"/>
+    <script type="text/javascript" src="../js/back_icon.js"></script>
+    <script type="text/javascript" src="../js/jquery.min.js"></script>
+    <script type="text/javascript" src="../js/common.js"></script>
+    <script type="text/javascript" src="../js/change_lange.js"></script>
     <style>
         .table {
             margin-top: 8px;
@@ -18,18 +19,22 @@
             color: #000000;
             text-align: center;
         }
+
         .table td,
         .table th {
             border-bottom: 1px solid #d8d8d8;
             padding: 0 1em 0;
             /*width: 33%;*/
         }
-        .table tr{
-            height:40px;
+
+        .table tr {
+            height: 40px;
         }
-        .jine{
+
+        .jine {
             color: red;
         }
+
         .mui-segmented-control {
             border: 1px solid #fec900;
         }
@@ -47,27 +52,29 @@
 </head>
 
 <body>
-	<script>
-			if(localStorage.pagecount == 1) {
-				addCssByLink('../css/zh.css');
-			} else if(localStorage.pagecount == 2) {
-				addCssByLink('../css/en.css');
-			}
-		</script>
+<script>
+    if (localStorage.pagecount == 1) {
+        addCssByLink('../css/zh.css');
+    } else if (localStorage.pagecount == 2) {
+        addCssByLink('../css/en.css');
+    }
+</script>
 <header class="mui-bar mui-bar-nav" style="background-color: #46adfc;">
     <i class="mui-icon mui-icon-left-nav mui-pull-left" onclick="back_go()"></i>
     <h1 class="mui-title"><span class="language-zhuanchujilu"></span></h1>
 </header>
 <div class="mui-content">
     <!--<div style="padding: 20px 20px;background-color: #FFFFFF;">-->
-        <!--<div id="segmentedControl" class="mui-segmented-control">-->
-            <!--<a id="yue" class="mui-control-item mui-active" href="#item1">余额转出记录</a>-->
-            <!--<a id="liutong" class="mui-control-item" href="#item2">流通转出记录</a>-->
-        <!--</div>-->
+    <!--<div id="segmentedControl" class="mui-segmented-control">-->
+    <!--<a id="yue" class="mui-control-item mui-active" href="#item1">余额转出记录</a>-->
+    <!--<a id="liutong" class="mui-control-item" href="#item2">流通转出记录</a>-->
+    <!--</div>-->
     <!--</div>-->
 
     <div id="item1" class="mui-control-content mui-active">
-        <p id="none1" style="font-size: 16px; margin: auto;width: 160px;margin-top: 20px; display: none;text-align: center;"><span class="language-meiyoujilu"></span></p>
+        <p id="none1"
+           style="font-size: 16px; margin: auto;width: 160px;margin-top: 20px; display: none;text-align: center;"><span
+                class="language-meiyoujilu"></span></p>
         <table id="table1" class="table" width="100%">
             <tr>
                 <th><span class="language-zhuanzhangzhanghu"></span></th>
@@ -91,36 +98,36 @@
 
 </div>
 <script src="../js/mui.min.js"></script>
-<script type="text/javascript" src="../js/url.js" ></script>
+<script type="text/javascript" src="../js/url.js"></script>
 
 <script type="text/javascript">
     mui.init();
     $.ajax({
-        url: j_url+"/turnout/turn_recode",
+        url: j_url + "/turnout/turn_recode",
         type: 'POST',
         dataType: 'jsonp',
         data: {
-            u_id:localStorage.lastname
+            u_id: localStorage.lastname
         },
         crossDomain: true,
-        success: function(res) {
+        success: function (res) {
             console.log(res);
-            if(res.code == 2) {
+            if (res.code == 2) {
                 $("#none1").show();
                 $("#table1").hide();
-            } else if(res.code == 1) {
-            	 $("#none1").hide();
+            } else if (res.code == 1) {
+                $("#none1").hide();
                 $("#table1").show();
                 var rou = res.data;
                 $('.tbody').empty();
-                for(var key in rou) {
+                for (var key in rou) {
 
                     $('.tbody').append("<tr style='height: 35px;'><td>" + rou[key].target_uid + "</td> <td>" + rou[key].bo_money + "</td>" +
-                    "<td>"+ rou[key].bo_time +  "</td> </tr>");
+                        "<td>" + rou[key].bo_time + "</td> </tr>");
                 }
             }
         },
-        fail: function(res) {
+        fail: function (res) {
 
         }
     });
