--- a/mubei/TurnIn/turn_in.html
+++ b/mubei/TurnIn/turn_in.html
@@ -1,81 +1,89 @@
 <!doctype html>
 <html>
 
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../css/mui.min.css" rel="stylesheet" />
-		<script type="text/javascript" src="../js/back_icon.js" ></script>
-		<script type="text/javascript" src="../js/jquery.min.js" ></script>
-		<script src="../js/mui.min.js"></script>
-		<script type="text/javascript" src="../js/common.js" ></script>
-		<script type="text/javascript" src="../js/change_lange.js" ></script>
-	    <style>
-	    	.mui-content{
-				height: 100%;
-				background-color: #FFFFFF;
-			}
-	      .img{
-	    	text-align: center;
-	    	margin-bottom: 70px;
-		    }
-		 .img p{
-				margin-top: 15px;
-				color: #000000;
-			}
-			.mui-content-padded{
-				margin-bottom: 70px;
-			}
-	    </style>
-	</head>
+<head>
+    <meta charset="UTF-8">
+    <title>转入</title>
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <link href="../css/mui.min.css" rel="stylesheet"/>
+    <script type="text/javascript" src="../js/back_icon.js"></script>
+    <script type="text/javascript" src="../js/jquery.min.js"></script>
+    <script src="../js/mui.min.js"></script>
+    <script type="text/javascript" src="../js/common.js"></script>
+    <script type="text/javascript" src="../js/change_lange.js"></script>
+    <style>
+        .mui-content {
+            height: 100%;
+            background-color: #FFFFFF;
+        }
 
-	<body>
-		<script>
-			if(localStorage.pagecount == 1) {
-				addCssByLink('../css/zh.css');
-			} else if(localStorage.pagecount == 2) {
-				addCssByLink('../css/en.css');
-			}
-		</script>
-	
-		<div class="mui-content">
-			<div class="img">
-				<img alt="" width="100%" id="images">
-				<p><span class="language-saomiaozhifu"></span></p>
-			</div>
-			<div class="mui-content-padded">
-			<button type="button" style="background: #46adfc;border: #46adfc" class="mui-btn mui-btn-warning mui-btn-block" onclick="window.location.href='turnin_recode.html';"><span class="language-zhuanrujilu"></span></button>
-			</div>
-			
-		</div>
-		
-		<script type="text/javascript" src="../js/url.js" ></script>
-		<script type="text/javascript">
-			mui.init();
+        .img {
+            text-align: center;
+            margin-bottom: 70px;
+        }
 
-			$.ajax({
-				url: j_url + "/turnin/turn_in",
-				type: 'POST',
-				dataType: 'jsonp',
-				data: {
-					u_id: localStorage.lastname
-				},
-				crossDomain: true,
-				success: function(res) {
-					console.log(res);
-					if(res.code == 2) {
-						mui.alert(res.msg);
-					} else if(res.code == 1) {
-						$('#images').attr("src",res.url);
-					}
-				},
-				fail: function(res) {
+        .img p {
+            margin-top: 15px;
+            color: #000000;
+        }
 
-				}
-			});
+        .mui-content-padded {
+            margin-bottom: 70px;
+        }
+    </style>
+</head>
 
-		</script>
-	</body>
+<body>
+<script>
+    if (localStorage.pagecount == 1) {
+        addCssByLink('../css/zh.css');
+    } else if (localStorage.pagecount == 2) {
+        addCssByLink('../css/en.css');
+    }
+</script>
+
+<div class="mui-content">
+    <div class="img">
+        <img alt="" width="100%" id="images">
+        <p><span class="language-saomiaozhifu"></span></p>
+    </div>
+    <div class="mui-content-padded">
+        <button type="button" style="background: #46adfc;border: #46adfc"
+                class="mui-btn mui-btn-warning mui-btn-block"
+                onclick="window.location.href='turnin_recode.html';">
+            <span class="language-zhuanrujilu"></span>
+        </button>
+    </div>
+
+</div>
+
+<script type="text/javascript" src="../js/url.js"></script>
+<script type="text/javascript">
+    mui.init();
+
+    $.ajax({
+        url: j_url + "/turnin/turn_in",
+        type: 'POST',
+        dataType: 'jsonp',
+        data: {
+            u_id: localStorage.lastname
+        },
+        crossDomain: true,
+        success: function (res) {
+            console.log(res);
+            if (res.code == 2) {
+                mui.alert(res.msg);
+            } else if (res.code == 1) {
+                $('#images').attr("src", res.url);
+            }
+        },
+        fail: function (res) {
+
+        }
+    });
+
+</script>
+</body>
 
 </html>
