--- a/mubei/jiaoyi/BuyIn/unfilled_order.html
+++ b/mubei/jiaoyi/BuyIn/unfilled_order.html
@@ -85,16 +85,20 @@
 <div class="mui-content">
     <div style="padding: 20px 20px;background-color: #FFFFFF;">
         <div id="segmentedControl" class="mui-segmented-control">
-            <a id="order_no" class="mui-control-item mui-active" href="#item1"><span
-                    class="language-weixuanshoukuanren"></span></a>
-            <a id="order_y" class="mui-control-item" href="#item2"><span class="language-yixuanshoukuanren"></span></a>
+            <a id="order_no" class="mui-control-item mui-active" href="#item1">
+                <span class="language-weixuanshoukuanren"></span>
+            </a>
+            <a id="order_y" class="mui-control-item" href="#item2">
+                <span class="language-yixuanshoukuanren"></span>
+            </a>
         </div>
     </div>
 
     <div id="item1" class="mui-control-content mui-active">
-        <p id="none1"
-           style="font-size: 16px; margin: auto;width: 160px;margin-top: 20px; display: none;text-align: center;"><span
-                class="language-meiyoujilu"></span></p>
+        <p id="none1" style="font-size: 16px; margin: auto;width: 160px;margin-top: 20px;
+            display: none;text-align: center;">
+            <span class="language-meiyoujilu"></span>
+        </p>
         <ul id="list1" class="l_ul">
             <!--<li>
                 <div class="list">
@@ -123,9 +127,10 @@
         </ul>
     </div>
     <div id="item2" class="mui-control-content">
-        <p id="none2"
-           style="font-size: 16px; margin: auto;width: 160px;margin-top: 20px; display: none;text-align: center;"><span
-                class="language-meiyoujilu"></span></p>
+        <p id="none2" style="font-size: 16px; margin: auto;width: 160px;
+            margin-top: 20px; display: none;text-align: center;">
+            <span class="language-meiyoujilu"></span>
+        </p>
         <ul id="list2" class="l_ul">
 
 
