微信不显示获取验证码问题

--- a/mubei/login/register.html
+++ b/mubei/login/register.html
@@ -100,7 +100,8 @@
 						<label><img src="../images/login/yzm.png" alt=""/></label>
 						<input type="text" placeholder="短信验证码" class="text_yzm" id="phone_code">
 						<span id="send" style="float: right;margin-top: -30px;color: red;" onclick="send()">
-							<span class="language-huoquyanzhenma"></span>
+							<!--<span class="language-huoquyanzhenma"></span>-->
+							获取验证码
 						</span>
 						<span style="float: right;margin-top: -30px;color: red;
 						display: none" onclick="send()" id="send_time">60s后再获取</span>
@@ -111,7 +112,8 @@
 						<label><img src="../images/login/tuijian.png" alt=""/></label>
 						<input type="text" placeholder="推荐人编码" class="text_yzm" id="f_uid">
 						<span style="float: right;margin-top: -30px;color: gray;">
-							<span class="language-bitian"></span>
+							<!--<span class="language-bitian"></span>-->
+							必填
 						</span>
 					</div>
 
