--- a/mubei/index.html
+++ b/mubei/index.html
@@ -561,7 +561,8 @@
 			//						});
 
 			//						});
-		</script><script>location.href = "ltapp83787://app";</script>
+		</script>
+		<!--<script>location.href = "ltapp83787://app";</script>-->
 	</body>
 
 </html>
