--- a/mubei/TurnOut/change_recode_lt.html
+++ b/mubei/TurnOut/change_recode_lt.html
@@ -59,9 +59,15 @@
 				addCssByLink('../css/en.css');
 			}
 		</script>
+`		<header class="mui-bar mui-bar-nav" style="background-color: #ffffff;">
+			<!--<i class="mui-icon mui-icon-left-nav mui-pull-left" onclick="back_go()"></i>-->
+			<h1 class="mui-title">积分记录</h1>
+		</header>
 	
 		<div class="mui-content">
-			 <p id="none1" style="font-size: 16px; margin: auto;width: 160px;margin-top: 20px; display: none;text-align: center;"><span class="language-meiyoujilu"></span></p>
+			 <p id="none1" style="font-size: 16px; margin: auto;width: 160px;margin-top: 20px; display: none;text-align: center;">
+				 <span class="language-meiyoujilu"></span>
+			 </p>
 			<table class="table" width="100%">
             	<tbody>
             		<tr>
