--- a/mubei/TurnOut/turn_recode.html
+++ b/mubei/TurnOut/turn_recode.html
@@ -59,8 +59,8 @@
         addCssByLink('../css/en.css');
     }
 </script>
-<header class="mui-bar mui-bar-nav" style="background-color: #46adfc;">
-    <i class="mui-icon mui-icon-left-nav mui-pull-left" onclick="back_go()"></i>
+<header class="mui-bar mui-bar-nav" style="background-color: #ffffff;">
+    <!--<i class="mui-icon mui-icon-left-nav mui-pull-left" onclick="back_go()"></i>-->
     <h1 class="mui-title"><span class="language-zhuanchujilu"></span></h1>
 </header>
 <div class="mui-content">
