--- a/mubei/jiaoyi/BuyIn/recharge.html
+++ b/mubei/jiaoyi/BuyIn/recharge.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>申诉</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <link href="../../css/mui.min.css" rel="stylesheet" />
     <script type="text/javascript" src="../../js/jquery.min.js"></script>
@@ -89,8 +89,8 @@
 </head>
 
 <body>
-<header class="mui-bar mui-bar-nav" style="background-color: #46adfc;">
-    <i class="mui-icon mui-icon-left-nav mui-pull-left mui-action-back"></i>
+<header class="mui-bar mui-bar-nav" style="background-color: #ffffff;">
+    <!--<i class="mui-icon mui-icon-left-nav mui-pull-left mui-action-back"></i>-->
     <h1 class="mui-title">申诉</h1>
     <button class="mui-btn mui-btn-blue mui-btn-link mui-pull-right" style="color: #000000;font-size: 14px;" onclick="window.location.href='recharge_recode.html'; "><span class="language-chongzhijilu"></span></button>
 </header>
