--- a/mubei/GerenCenter/share_recode.html
+++ b/mubei/GerenCenter/share_recode.html
@@ -36,7 +36,8 @@
 </header>
 <div style="height:10px"></div>
 <div class="mui-content">
-    <p id="none1" style="font-size: 16px; margin: auto;width: 180px;margin-top: 20px; display: none;text-align: center;">
+    <p id="none1"
+       style="font-size: 16px; margin: auto;width: 180px;margin-top: 20px; display: none;text-align: center;">
         <span class="language-meiyoujilu"></span>
     </p>
     <ul class="mui-table-view mui-table-view-chevron">
