--- a/mubei/GerenCenter/About.html
+++ b/mubei/GerenCenter/About.html
@@ -1,62 +1,63 @@
 <!doctype html>
 <html>
 
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../css/mui.min.css" rel="stylesheet" />
-		<script type="text/javascript" src="../js/jquery.min.js"></script>
-		<script src="../js/mui.min.js"></script>
-		<script type="text/javascript" src="../js/back_icon.js" ></script>
-		<script type="text/javascript" src="../js/change_lange.js" ></script>
-		<style>
-			h5{
-				color: #000000; 
-			}
-		</style>  
-	</head>
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <link href="../css/mui.min.css" rel="stylesheet"/>
+    <script type="text/javascript" src="../js/jquery.min.js"></script>
+    <script src="../js/mui.min.js"></script>
+    <script type="text/javascript" src="../js/back_icon.js"></script>
+    <script type="text/javascript" src="../js/change_lange.js"></script>
+    <style>
+        h5 {
+            color: #000000;
+        }
+    </style>
+</head>
 
-	<body>
-		<script>
-			if(localStorage.pagecount == 1) {
-				addCssByLink('../css/zh.css');
-			} else if(localStorage.pagecount == 2) {
-				addCssByLink('../css/en.css');
-			}
-		</script>
-		<header class="mui-bar mui-bar-nav" style="background-color: #FFFFFF;">
-			<!--<i class="mui-icon mui-icon-left-nav mui-pull-left" onclick="back_go()"></i>-->
-			<h1 class="mui-title" style="color: #000000;"><span class="language-about"></span></h1>
-		</header>
-		<div class="mui-content" style="background-color: white;" id="text">
+<body>
+<script>
+    if (localStorage.pagecount == 1) {
+        addCssByLink('../css/zh.css');
+    } else if (localStorage.pagecount == 2) {
+        addCssByLink('../css/en.css');
+    }
+</script>
+<header class="mui-bar mui-bar-nav" style="background-color: #FFFFFF;">
+    <!--<i class="mui-icon mui-icon-left-nav mui-pull-left" onclick="back_go()"></i>-->
+    <h1 class="mui-title" style="color: #000000;"><span class="language-about"></span></h1>
+</header>
+<div class="mui-content" style="background-color: white;" id="text">
 
-		</div>
-	
-		<script type="text/javascript" src="../js/common.js"></script>
-		<script type="text/javascript" src="../js/url.js"></script>
-		<script type="text/javascript">
-			mui.init();
-			$.ajax({
-				url: j_url + "index/about",
-				data: {
-					token:'about',
-					type:localStorage.pagecount
-				},
-				type: "POST",
-				dataType: 'jsonp',
-				crossDomain: true,
-				success: function(res) {
-					console.log(res);
-					if(res.code == 2) {
-						mui.alert(res.msg);
-					} else if(res.code == 1) {
-						$("#text").html(res.data.a_text);
+</div>
 
-					}
-				}
-			});		
-		</script>
-	</body>
+<script type="text/javascript" src="../js/common.js"></script>
+<script type="text/javascript" src="../js/url.js"></script>
+<script type="text/javascript">
+    mui.init();
+    $.ajax({
+        url: j_url + "index/about",
+        data: {
+            token: 'about',
+            type: localStorage.pagecount
+        },
+        type: "POST",
+        dataType: 'jsonp',
+        crossDomain: true,
+        success: function (res) {
+            console.log(res);
+            if (res.code == 2) {
+                mui.alert(res.msg);
+            } else if (res.code == 1) {
+                $("#text").html(res.data.a_text);
+
+            }
+        }
+    });
+</script>
+</body>
 
 </html>
