--- a/mubei/GerenCenter/geren.html
+++ b/mubei/GerenCenter/geren.html
@@ -1,187 +1,203 @@
 <!doctype html>
 <html>
 
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../css/mui.min.css" rel="stylesheet" />
-		<style>
-			.t_img {
-				width: 100%;
-				height: 90px;
-				border-bottom: 1px solid gainsboro;
-				background-color: white;
-				margin-top: -5px;
-			}
-			.t_img a {
-				line-height: 80px;
-				padding-right: 10px;
-				color: gray;
-			}
-			.img {
-				width: 18%;
-				height: 65px;
-				margin-top: 10px;
-				margin-left: 10px;
-				float: left;
-			}
-			.word {
-				width: 55%;
-				float: left;
-			}
-			ul {
-				-webkit-padding-start: 0px;
-			}
-			.t_img li {
-				list-style: none;
-			}
-			.border_bottom {
-				padding-bottom: 10px;
-			}
-			.s_word {
-				width: 100%;
-				padding: 10px 5px;
-				background-color: white;
-				overflow: hidden;
-				border-bottom: 5px;
-			}
-			.word_left {
-				float: left;
-				width: 33%;
-				text-align: center;
-			}
-			.word_left p {
-				color: #000000;
-				font-size: 15px;
-			}
-			.border_right {
-				border-right: 1px solid gainsboro;
-			}
-			.mui-table-view-cell span{
-				float: left;
-				display: block;
-				padding-top: 7px;padding-left: 5px;
-			}
-			.mui-btn{
-				background-color:#fec900;
-			}
-		</style>
-	</head>
-
-	<body>
-		<header class="mui-bar mui-bar-nav" style="background-color: #fec900;">
-			<h1 class="mui-title">设置</h1>
-		</header>
-		
-		<div class="mui-content">
-			<div class="t_img">
-					<div class="img">
-						<img src="images/shouye/touxiang.jpg" alt="" style="width: 100%;height: 100%;border-radius: 100%;" />
-					</div>
-					<div class="word">
-						<ul>
-							<li class="border_bottom">UID：123456</li>
-							<li>信用：<span style="color: red;">❤❤❤❤❤</span></li>
-						</ul>
-					</div>
-					<a>更换头像</a>
-				</div>
-				<div class="s_word">
-					<div class="word_left border_right">
-						<img src="images/shezhi/dianpu.png">
-						<p>我的店铺</p>
-					</div>
-					<div class="word_left border_right">
-						<img src="images/shezhi/order.png">
-						<p>订单</p>
-					</div>
-					<div class="word_left">
-						<img src="images/shezhi/dizhi.png">
-						<p>地址管理</p>
-					</div>
-				</div>
-
-				<ul class="mui-table-view mui-table-view-chevron">
-					<li class="mui-table-view-cell mui-media">
-						<a class="mui-navigate-right" href="GerenCenter/update_name.html">
-							<img class="mui-pull-left" src="images/shezhi/icon_03.png" height="32px"><span>昵称</span></a>
-					</li>
-				</ul>
-
-				<ul class="mui-table-view mui-table-view-chevron">
-					<li class="mui-table-view-cell mui-media">
-						<a class="mui-navigate-right" onclick="lange()">
-							<img class="mui-pull-left" src="images/shezhi/icon_06.png" height="32px"><span>多语言</span></a>
-					</li>
-					<li class="mui-table-view-cell mui-media">
-						<a class="mui-navigate-right" href="GerenCenter/announcement.html">
-							<img class="mui-pull-left" src="images/shezhi/icon_08.png" height="32px"><span>公告</span></a>
-					</li>
-					<li class="mui-table-view-cell mui-media">
-						<a class="mui-navigate-right" href="#account">
-							<img class="mui-pull-left" src="images/shezhi/icon_10.png" height="32px"><span>个人信息</span></a>
-					</li>
-				</ul>
-				<ul class="mui-table-view mui-table-view-chevron">
-					<li class="mui-table-view-cell mui-media">
-						<a class="mui-navigate-right" href="GerenCenter/bank.html">
-							<img class="mui-pull-left" src="images/shezhi/icon_12.png" height="32px"><span>银行卡</span></a>
-					</li>
-					<li class="mui-table-view-cell mui-media">
-						<a class="mui-navigate-right" href="GerenCenter/update_loginpsw.html">
-							<img class="mui-pull-left" src="images/shezhi/icon_14.png" height="32px"><span>登录密码</span></a>
-					</li>
-				</ul>
-				<ul class="mui-table-view mui-table-view-chevron">
-					<li class="mui-table-view-cell mui-media">
-						<a class="mui-navigate-right" href="GerenCenter/update_paypsw.html">
-							<img class="mui-pull-left" src="images/shezhi/icon_16.png" height="32px">
-							<span>支付密码</span></a>
-					</li>
-				</ul>
-				<ul class="mui-table-view mui-table-view-chevron">
-					<li class="mui-table-view-cell mui-media">
-						<a class="mui-navigate-right" href="GerenCenter/advice.html">
-							<img class="mui-pull-left" src="images/shezhi/icon_18.png" height="32px"><span>投诉建议</span></a>
-					</li>
-					<li class="mui-table-view-cell mui-media">
-						<a class="mui-navigate-right" href="share/share.html">
-							<img class="mui-pull-left" src="images/shezhi/icon_20.png" height="32px"><span>分享</span></a>
-					</li>
-					<li class="mui-table-view-cell mui-media">
-						<a class="mui-navigate-right" href="GerenCenter/banben.html">
-							<img class="mui-pull-left" src="images/shezhi/icon_22.png" height="32px"><span>版本</span></a>
-					</li>
-					<li class="mui-table-view-cell mui-media">
-						<a class="mui-navigate-right" href="GerenCenter/About.html">
-							<img class="mui-pull-left" src="images/shezhi/icon_24.png" height="32px"><span>关于</span></a>
-					</li>
-				</ul>
-				<div class="mui-content-padded">
-					<button type="button" class="mui-btn mui-btn-warning mui-btn-block" onclick="window.location.href='login.html';">退出登录</button>
-				</div>
-		</div>
-		<script type="text/javascript" src="../js/jquery.js" ></script>
-		<script type="text/javascript" src="../js/layer/2.4/layer.js" ></script>
-		<script src="../js/mui.min.js"></script>
-		<script type="text/javascript">
-			mui.init()
-			
-			 function lange(){
-            layer.open({
-                type: 2,
-                closeBtn: 1,
-                title: '语言选择',
-                shadeClose: true,
-                shade: 0.4,
-                anim: 9,
-                area: ['80%', '28%'],
-                isOutAnim: false, 
-                content:"lange.html"
-            });
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <link href="../css/mui.min.css" rel="stylesheet"/>
+    <style>
+        .t_img {
+            width: 100%;
+            height: 90px;
+            border-bottom: 1px solid gainsboro;
+            background-color: white;
+            margin-top: -5px;
         }
-		</script>
-	</body>
+
+        .t_img a {
+            line-height: 80px;
+            padding-right: 10px;
+            color: gray;
+        }
+
+        .img {
+            width: 18%;
+            height: 65px;
+            margin-top: 10px;
+            margin-left: 10px;
+            float: left;
+        }
+
+        .word {
+            width: 55%;
+            float: left;
+        }
+
+        ul {
+            -webkit-padding-start: 0px;
+        }
+
+        .t_img li {
+            list-style: none;
+        }
+
+        .border_bottom {
+            padding-bottom: 10px;
+        }
+
+        .s_word {
+            width: 100%;
+            padding: 10px 5px;
+            background-color: white;
+            overflow: hidden;
+            border-bottom: 5px;
+        }
+
+        .word_left {
+            float: left;
+            width: 33%;
+            text-align: center;
+        }
+
+        .word_left p {
+            color: #000000;
+            font-size: 15px;
+        }
+
+        .border_right {
+            border-right: 1px solid gainsboro;
+        }
+
+        .mui-table-view-cell span {
+            float: left;
+            display: block;
+            padding-top: 7px;
+            padding-left: 5px;
+        }
+
+        .mui-btn {
+            background-color: #fec900;
+        }
+    </style>
+</head>
+
+<body>
+<header class="mui-bar mui-bar-nav" style="background-color: #fec900;">
+    <h1 class="mui-title">设置</h1>
+</header>
+
+<div class="mui-content">
+    <div class="t_img">
+        <div class="img">
+            <img src="images/shouye/touxiang.jpg" alt="" style="width: 100%;height: 100%;border-radius: 100%;"/>
+        </div>
+        <div class="word">
+            <ul>
+                <li class="border_bottom">UID：123456</li>
+                <li>信用：<span style="color: red;">❤❤❤❤❤</span></li>
+            </ul>
+        </div>
+        <a>更换头像</a>
+    </div>
+    <div class="s_word">
+        <div class="word_left border_right">
+            <img src="images/shezhi/dianpu.png">
+            <p>我的店铺</p>
+        </div>
+        <div class="word_left border_right">
+            <img src="images/shezhi/order.png">
+            <p>订单</p>
+        </div>
+        <div class="word_left">
+            <img src="images/shezhi/dizhi.png">
+            <p>地址管理</p>
+        </div>
+    </div>
+
+    <ul class="mui-table-view mui-table-view-chevron">
+        <li class="mui-table-view-cell mui-media">
+            <a class="mui-navigate-right" href="GerenCenter/update_name.html">
+                <img class="mui-pull-left" src="images/shezhi/icon_03.png" height="32px"><span>昵称</span></a>
+        </li>
+    </ul>
+
+    <ul class="mui-table-view mui-table-view-chevron">
+        <li class="mui-table-view-cell mui-media">
+            <a class="mui-navigate-right" onclick="lange()">
+                <img class="mui-pull-left" src="images/shezhi/icon_06.png" height="32px"><span>多语言</span></a>
+        </li>
+        <li class="mui-table-view-cell mui-media">
+            <a class="mui-navigate-right" href="GerenCenter/announcement.html">
+                <img class="mui-pull-left" src="images/shezhi/icon_08.png" height="32px"><span>公告</span></a>
+        </li>
+        <li class="mui-table-view-cell mui-media">
+            <a class="mui-navigate-right" href="#account">
+                <img class="mui-pull-left" src="images/shezhi/icon_10.png" height="32px"><span>个人信息</span></a>
+        </li>
+    </ul>
+    <ul class="mui-table-view mui-table-view-chevron">
+        <li class="mui-table-view-cell mui-media">
+            <a class="mui-navigate-right" href="GerenCenter/bank.html">
+                <img class="mui-pull-left" src="images/shezhi/icon_12.png" height="32px"><span>银行卡</span></a>
+        </li>
+        <li class="mui-table-view-cell mui-media">
+            <a class="mui-navigate-right" href="GerenCenter/update_loginpsw.html">
+                <img class="mui-pull-left" src="images/shezhi/icon_14.png" height="32px"><span>登录密码</span></a>
+        </li>
+    </ul>
+    <ul class="mui-table-view mui-table-view-chevron">
+        <li class="mui-table-view-cell mui-media">
+            <a class="mui-navigate-right" href="GerenCenter/update_paypsw.html">
+                <img class="mui-pull-left" src="images/shezhi/icon_16.png" height="32px">
+                <span>支付密码</span></a>
+        </li>
+    </ul>
+    <ul class="mui-table-view mui-table-view-chevron">
+        <li class="mui-table-view-cell mui-media">
+            <a class="mui-navigate-right" href="GerenCenter/advice.html">
+                <img class="mui-pull-left" src="images/shezhi/icon_18.png" height="32px"><span>投诉建议</span></a>
+        </li>
+        <li class="mui-table-view-cell mui-media">
+            <a class="mui-navigate-right" href="share/share.html">
+                <img class="mui-pull-left" src="images/shezhi/icon_20.png" height="32px"><span>分享</span></a>
+        </li>
+        <li class="mui-table-view-cell mui-media">
+            <a class="mui-navigate-right" href="GerenCenter/banben.html">
+                <img class="mui-pull-left" src="images/shezhi/icon_22.png" height="32px"><span>版本</span></a>
+        </li>
+        <li class="mui-table-view-cell mui-media">
+            <a class="mui-navigate-right" href="GerenCenter/About.html">
+                <img class="mui-pull-left" src="images/shezhi/icon_24.png" height="32px"><span>关于</span></a>
+        </li>
+    </ul>
+    <div class="mui-content-padded">
+        <button type="button" class="mui-btn mui-btn-warning mui-btn-block"
+                onclick="window.location.href='login.html';">退出登录
+        </button>
+    </div>
+</div>
+<script type="text/javascript" src="../js/jquery.js"></script>
+<script type="text/javascript" src="../js/layer/2.4/layer.js"></script>
+<script src="../js/mui.min.js"></script>
+<script type="text/javascript">
+    mui.init()
+
+    function lange() {
+        layer.open({
+            type: 2,
+            closeBtn: 1,
+            title: '语言选择',
+            shadeClose: true,
+            shade: 0.4,
+            anim: 9,
+            area: ['80%', '28%'],
+            isOutAnim: false,
+            content: "lange.html"
+        });
+    }
+</script>
+</body>
 
 </html>
